// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/HighlightedName Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <span
      class="sc-fKFxtB eNMjwF sc-iwyWTf jxyIcA sc-GTVdH goGSJl sc-gsxoIA bEPlXH"
    >
      Frontend Service
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/HighlightedName With Custom Colors 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <span
      class="sc-fKFxtB eNMjwF sc-iwyWTf ekMJvz sc-GTVdH goGSJl sc-gsxoIA gEeCxM"
    >
      Frontend Service
    </span>
  </div>
</div>
`;
